--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-starter-parent</artifactId>
-		<version>Brixton.BUILD-SNAPSHOT</version>
+		<!-- <version>Brixton.BUILD-SNAPSHOT</version> -->
+		<version>Brixton.M1</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -23,10 +24,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-monitor</artifactId>
 		</dependency>
+		 -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-stream-redis</artifactId>
